k8s/07-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logos
  namespace: logos
spec:
  selector:
    app: logos
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30920
    - name: api
      port: 8080
      targetPort: 8080
      nodePort: 30910
  type: NodePort
